# pretix-nix

./: flake.nix  node-packages.nix  pyproject.toml
