[tool.poetry]
name = "pretix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arabic-reshaper = "==3.0.0"
babel = "^2.12.1"
beautifulsoup4 = "==4.11.*"
bleach = "==5.0.*"
celery = "==5.2.*"
chardet = "==5.1.*"
cryptography = "<29.0.2"
css-inline = "==0.8.*"
defusedcsv = ">=1.1.0"
dj-static = "^0.0.6"
django = "==3.2.*,>=3.2.18"
django-bootstrap3 = "==22.2.*"
django-compressor = "==4.3.*"
django-countries = "==7.5.*"
django-filter = "==22.1"
django-formset-js-improved = "==0.5.0.3"
django-formtools = "==2.4"
django-hierarkey = "==1.1.*"
django-hijack = "==3.2.*"
django-i18nfield = "==1.9.*,>=1.9.4"
django-libsass = "==0.9"
django-localflavor = "==3.1"
django-markup = "^1.6"
django-mysql = "^4.9.0"
django-oauth-toolkit = "==2.2.*"
django-otp = "==1.1.*"
django-phonenumber-field = "==7.0.*"
django-redis = "==5.2.*"
django-scopes = "==1.2.*"
django-statici18n = "==2.3.*"
djangorestframework = "==3.14.*"
dnspython = "==2.2.*"
drf-ujson2 = "==1.7.*"
isoweek = "^1.3.3"
jsonschema = "^4.17.3"
kombu = "==5.2.*"
libsass = "==0.22.*"
lxml = "^4.9.2"
markdown = "==3.3.4"
mt-940 = "==4.23.*"
oauthlib = "==3.2.*"
openpyxl = "==3.1.*"
packaging = "^23.0"
paypalrestsdk = "==1.13.*"
paypal-checkout-serversdk = "==1.0.*"
pyjwt = "==2.6.*"
phonenumberslite = "==8.13.*"
pillow = "==9.4.*"
protobuf = "==4.22.*"
psycopg2-binary = "^2.9.5"
pycountry = "^22.3.5"
pycparser = "==2.21"
pycryptodome = "==3.17.*"
pypdf2 = "==2.12.*"
pypdf = "==3.4.*"
python-bidi = "==0.4.*"
python-dateutil = "==2.8.*"
python-u2flib-server = "==4.*"
pytz = "^2022.7.1"
pyuca = "^1.2"
redis = "==4.5.*"
reportlab = "==3.6.*"
requests = "==2.28.*"
sentry-sdk = "==1.15.*"
sepaxml = "==2.6.*"
slimit = "^0.8.1"
static3 = "==0.7.*"
stripe = "==5.1.*"
text-unidecode = "==1.*"
tlds = ">=2020041600"
tqdm = "==4.*"
vat-moss-forked = "==2020.3.20.0.11.0"
vobject = "==0.9.*"
webauthn = "==0.4.*"
zeep = "==4.2.*"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=0.12", "setuptools-rust"]
build-backend = "poetry.masonry.api"
